# netologyHW

abstraction/task1/: main.cpp
abstraction/task2/: main.cpp
class/hw1/: CMakeLists.txt  main.cpp
class/task2/: main.cpp
enumstructs/hw1/: hm1.cpp
enumstructs/hw2/: hw2.cpp
enumstructs/hw3/: main.cpp
inheritance/task1/: CMakeLists.txt  main.cpp
inheritance/task2/: main.cpp
inheritance/task3/: main.cpp
multifiles project/task 1/: CMakeLists.txt  main.cpp  mathAction.cpp  mathAction.h
multifiles project/task 2/: CMakeLists.txt  CounterClass.cpp  CounterClass.h  main.cpp
multifiles project/task3/: CMakeLists.txt  classDiamond.cpp  classDiamond.h  classEquilateralTriangle.cpp  classEquilateralTriangle.h  classFigure.cpp  classFigure.h  classIsoscelesTriangle.cpp  classIsoscelesTriangle.h  classParallelogram.cpp  classParallelogram.h  classQuadrangle.cpp  classQuadrangle.h  classRectangle.cpp  classRectangle.h  classRightTriangle.cpp  classRightTriangle.h  classSquare.cpp  classSquare.h  classTriangle.cpp  classTriangle.h  main.cpp
preproc and macros/task1/: main.cpp
preproc and macros/task2/: main.cpp
